# Gsync-server

./: README.md
agents/: .gitignore  Dockerfile  app.py  crew.py  pyproject.toml  services.py
agents/agents/: core.py  rag.py
agents/crews/enterprise_crew/: enterprise_crew.py
agents/crews/enterprise_crew/config/: agents.yaml  agents.yml  tasks.yaml  tasks.yml
agents/crews/iot_crew/: iot_crew.py
agents/crews/iot_crew/config/: agents.yaml  tasks.yml
agents/documents/: CEB 07 11 2024 Sent to print SEPC.pdf.md  CF Oct 15th 2024 yala final.pdf.md  Crop Watch 29th February 2024 (1).pdf.md
agents/notebooks/: rag_agent.ipynb
agents/templates/: financial_report.html
ai-models/pipe/: message.txt  pyproject.toml
ai-models/pipe/glassFlow/: agro-image-analysis.ipynb  demo.ipynb  requirements.txt  transform.py
ai-models/triaining-scripts/: plant-disease-train.py
assistant/: app.py  pyproject.toml
assistant/agents/: core.py
server/: .env.example  .gitignore  app.py  pyproject.toml  readme.md
server/auth/: authentication.py
server/database/: database.py  db_admin.py  db_comment.py  db_contact.py  db_plantation.py  db_post.py  db_prediction.py  db_sensor.py  db_user.py  db_votes.py  models.py
server/modules/: requirements.txt
server/router/: admin.py  comments.py  enterprise.py  login.py  plantations.py  post.py  posts.py  predictions.py  register.py  sensor.py  trending.py  user.py  votes.py
server/schemas/: admin.py  contact.py  plantation.py  post.py
server/services/: mail_service.py  topic_extractor.py
server/templates/: contact_email.html
server/test/: conftest.py  test-plantation.py  test_main.py
serverless/geoloc/supabase/: config.toml
serverless/geoloc/supabase/.temp/: pooler-url  project-ref
serverless/geoloc/supabase/functions/geo-location/: index.ts
