[project]
name = "assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.112.2",
    "langchain-community>=0.2.15",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "logfire[fastapi]>=0.51.0",
    "python-dotenv",
]
