[project]
name = "server"
version = "0.2.0"
description = "Backend API for GSYNC project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi-mail>=1.4.1",
    "fastapi[standard]>=0.112.2",
    "logfire[fastapi,sqlalchemy]>=0.51.0",
    "nltk>=3.9.1",
    "psycopg2>=2.9.9",
    "pytest>=8.3.2",
    "python-jose>=3.3.0",
    "redis-om>=0.3.2",
    "sqlalchemy>=2.0.32",
    "supabase>=2.7.3",
    "python-dotenv>=1.0.1"
]
